--- a/info/docs.texi
+++ b/info/docs.texi
@@ -15670,8 +15670,8 @@ The message is also placed in the kill ring for convenient yanking
 @findex emacspeak-speak-message-at-time
 
 @format
-Set up ring-at-time to speak message at specified time.
-Provides simple stop watch functionality in addition to other things.
+Speak message at specified time.
+Provides simple stop watch functionality.
 See documentation for command run-at-time for details on time-spec.
 
 (fn TIME MESSAGE)
